poke/testsuite/poke.pkl/ne-arrays-diag-1.pk
/* { dg-do compile } */

defvar e = ([1,2,3]
            != [1,2,3,4]); /* { dg-error "invalid.*\n.*expected" } */
